# github-actions-test

./: Dockerfile  pyproject.toml  requirements.txt
.github/workflows/: cicd.yml  python-app.yml
tests/: test_app.py  test_operation.py
